@@ -4,11 +4,11 @@ Course: cs400
 Semester: Spring 2020
 Project name: Matrix calculator
 Team Members:
-Chengpo Yan LEC001 xteam186 - cyan46@wisc.edu
-Jinming Zhang, LEC001, x-team132 - jzhang2279@wisc.edu
-Archer Li LEC001 x-team145 - zli885@wisc.edu
-Houming Chen, LEC001, xteam149 - hchen634@wisc.edu
-Chengxu Bian, LEC001, xteam102 - cbian7@wisc.edu
+Chengpo Yan, LEC001, cyan46@wisc.edu
+Jinming Zhang, LEC001, jzhang2279@wisc.edu
+Archer Li LEC001, zli885@wisc.edu
+Houming Chen, LEC001, hchen634@wisc.edu
+Chengxu Bian, LEC001, cbian7@wisc.edu
 
  
 
@@ -16,8 +16,19 @@ Which team members were on same xteam together?
 *no one.
 
 Other notes or comments to the grader:
-check README.MD for more detailed and better explaination
 
-[place any comments or notes that will help the grader here]
+Program can simply running by using command line to run the executable.jar file. Running in Java code required JavaFx and JDK11 pre-installed.
+Running demo
+PLEASE USING FOLLOWING COMMAND FOR RUNNING .JAR FILE
+REMEMBER TO CHANGE "Path-to-javafx-lib" TO YOUR OWN PATH
+java --module-path "Path-to-javafx-lib" --add-modules javafx.controls,javafx.fxml -jar executable.jar
+
+Program Description
+program functions as a calculator that support Matrix calculations supports pirorty calculation. Matrixs and calculation can be read from json files for computing result.
+!Mark! to open .json file, click Menu then click Open.(save is not aviable now)
+Please see SimpleData.json for the sample format.
+You can click '<' '>' or '√' to change from different operations that been read from the SimpleData.json.
+Warning, If code in ateam.zip won't run, please check CS400_final_project.zip
+
 #### Warning, If code in ateam.zip won't run, please check CS400_final_project.zip
 #### Be sure to check README.md for more detailed describtion!!!
